cadastro, login e get service na api

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -11,6 +11,10 @@
       "./src",
       "./test",
     ],
+    "typeRoots": [
+      "./src/@types",
+      "./node_modules/@types"
+    ],
     "resolveJsonModule": true,
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
