--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,9 +20,11 @@
     "prisma": "^4.13.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
