--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -22,9 +22,11 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/compiler-dom": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/server-renderer": "^3.0.1",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.34.0",
