Cadastro de endereço, tela de perfil, mudança de cores e de ícones

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rm -rf ./dist && tsc",
     "start": "npm run build && node dist/src/App.js",
-    "dev": "ts-node-dev src/App.ts"
+    "dev": "ts-node-dev src/App.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
