--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -32,7 +32,7 @@
   },
   "include": [
     "./src/**/*.ts",
-    "./test/**/*.ts",
+    "./__tests__/**/*.ts",
     "prisma/BaseDatabase.ts",
   ],
   "exclude": [
