--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,8 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "prisma": "^4.13.0"
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -30,6 +29,7 @@
     "@types/node": "^18.16.3",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
+    "prisma": "^4.13.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
