--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.62.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue-uuid": "^3.0.0",
     "vuetify": "^3.3.0"
   },
   "devDependencies": {
