--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "maska": "^2.1.9",
     "pinia": "^2.0.32",
     "sass": "^1.62.1",
     "vue": "^3.2.47",
